Substantial - solved some various issues (contrast one seems unproblematic, the text in the accent color is perfectly readable), updated README

--- a/src/style.css
+++ b/src/style.css
@@ -121,10 +121,13 @@ html * {
     }
 }
 
+img {
+    margin: auto;
+}
+
 .image-box {
+    margin-top: 10px;
     width: 100%;
-    justify-content: center;
-    background-color: red;
 }
 
 form {
